--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es5",
     "strict": true,
+    "target": "es5",
+    "experimentalDecorators": true,
     "declaration": true,
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "lib": [
+      "es5"
+    ]
   },
-  "include": [
-    "./src/index.ts"
-  ]
+  "include": ["src/*"]
 }
