--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "totsuzen-text",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Convert to '突然の死 like text'",
   "main": "lib/index.js",
   "bin": {
@@ -13,7 +13,9 @@
   },
   "files": [
     "lib",
-    "bin"
+    "bin",
+    "README.md",
+    "package.json"
   ],
   "repository": {
     "type": "git",
