--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "totsuzen-text",
-  "version": "0.0.6",
+  "version": "1.0.0",
   "description": "Convert to '突然の死 like text'",
   "main": "lib/index.js",
   "bin": {
@@ -8,6 +8,7 @@
     "ttzn": "./bin/totsuzen"
   },
   "scripts": {
+    "lint": "eslint src/*",
     "build": "tsc",
     "debug": "ts-node src/debug.ts"
   },
@@ -28,11 +29,14 @@
     "url": "https://github.com/taqm/totsuzen-text/issues"
   },
   "devDependencies": {
-    "@types/node": "^10.12.12",
+    "@types/node": "^10.14.8",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.3",
     "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.2.2"
+    "typescript": "^3.4.5"
   },
   "dependencies": {}
 }
